[package]
name = "fltkrs-richdisplay"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"
keywords = ["richdisplay", "fltk"]
description = "基于fltk-rs的富文本组件，作为fltk-TextDisplay组件的补充，增强样式组合，支持图文混排。"
readme = "README.md"
authors = ["t1000ln <t1000_ln@aliyun.com>"]
license = "MIT"
categories = ["gui"]
repository = "https://github.com/t1000ln/fltkrs-richdisplay"
#documentation = "https://docs.rs/fltkrs-richdisplay"
exclude = ["res/*", "examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1.4.15", features = ["use-ninja"] }
idgenerator-thin = "0.1.2"
log = "0.4"
throttle_my_fn = "0.2.6"
parking_lot = "0.12.1"
#async-global-executor = "2.3.1"
#edge-executor = "0.4.0"

[dev-dependencies]
simple_logger = "4.2"
tokio = { version = "1.33", features = ["full"] }
rand = "0.8.5"