[package]
name = "fltkrs-richdisplay"
version = "1.0.0"
edition = "2021"
rust-version = "1.70.0"
keywords = ["richdisplay", "fltk"]
description = "基于fltk-rs的富文本组件，增强样式组合，支持图文混排，支持分页加载历史数据。"
readme = "README.md"
authors = ["t1000ln <t1000_ln@aliyun.com>"]
license = "MIT"
categories = ["gui"]
repository = "https://github.com/t1000ln/fltkrs-richdisplay"
#documentation = "https://docs.rs/fltkrs-richdisplay"
exclude = [".git", ".github", ".gitignore", ".idea", "logs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1", features = ["use-ninja"] }
idgenerator-thin = "0"
log = "0"
parking_lot = "0"
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "parking_lot"]}
serde = { version = "1", features = ["derive"] }
once_cell = "1"
debounce_fltk = "0"
regex = "1"

[dev-dependencies]
#simple_logger = "4"
rand = "0"
time = "0"
fast_log = "1"